{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 29,
  "lineage": "46612ac6-36f5-99d5-95d7-df69e57e61fd",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02269c60d8010f700",
            "domain": "vpc",
            "id": "eipalloc-02269c60d8010f700",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-8-2.compute-1.amazonaws.com",
            "public_ip": "52.44.8.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e0b145726b2adf6",
            "domain": "vpc",
            "id": "eipalloc-08e0b145726b2adf6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-187-245.compute-1.amazonaws.com",
            "public_ip": "34.232.187.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04187a716adfbc9b4",
            "domain": "vpc",
            "id": "eipalloc-04187a716adfbc9b4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-223-241.compute-1.amazonaws.com",
            "public_ip": "3.228.223.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:internet-gateway/igw-00c39e221477bbf51",
            "id": "igw-00c39e221477bbf51",
            "owner_id": "625413607130",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02269c60d8010f700",
            "connectivity_type": "public",
            "id": "nat-0565ad22917665165",
            "network_interface_id": "eni-0f17fce22a624e6ec",
            "private_ip": "10.0.101.117",
            "public_ip": "52.44.8.2",
            "subnet_id": "subnet-0cd5c94851eb39d99",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e0b145726b2adf6",
            "connectivity_type": "public",
            "id": "nat-0671cd95f79b8f844",
            "network_interface_id": "eni-04ccd9859ee8a7831",
            "private_ip": "10.0.102.147",
            "public_ip": "34.232.187.245",
            "subnet_id": "subnet-03db672ba4e1164b3",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04187a716adfbc9b4",
            "connectivity_type": "public",
            "id": "nat-03e5943ae28d25e05",
            "network_interface_id": "eni-0ad8a0e05df31f7e2",
            "private_ip": "10.0.103.222",
            "public_ip": "3.228.223.241",
            "subnet_id": "subnet-0774cde14c2ae7d42",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e86a7c26df4c77cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0565ad22917665165",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e86a7c26df4c77cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd864dca7fcd87ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0671cd95f79b8f844",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd864dca7fcd87ec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-053c03546c30f09b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e5943ae28d25e05",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053c03546c30f09b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c39e221477bbf51",
            "id": "r-rtb-0569386c98b3f2bf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0569386c98b3f2bf7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:route-table/rtb-0e86a7c26df4c77cd",
            "id": "rtb-0e86a7c26df4c77cd",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:route-table/rtb-0bd864dca7fcd87ec",
            "id": "rtb-0bd864dca7fcd87ec",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:route-table/rtb-053c03546c30f09b8",
            "id": "rtb-053c03546c30f09b8",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:route-table/rtb-0569386c98b3f2bf7",
            "id": "rtb-0569386c98b3f2bf7",
            "owner_id": "625413607130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0dd8e5b34bc781e",
            "route_table_id": "rtb-0e86a7c26df4c77cd",
            "subnet_id": "subnet-06871550adf3d861f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b890b5309146199f",
            "route_table_id": "rtb-0bd864dca7fcd87ec",
            "subnet_id": "subnet-01e413acdf14b9a78"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026c52364d8f09b1d",
            "route_table_id": "rtb-053c03546c30f09b8",
            "subnet_id": "subnet-017e23c2c1e95d40b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b16f3ed337a75f6d",
            "route_table_id": "rtb-0569386c98b3f2bf7",
            "subnet_id": "subnet-0cd5c94851eb39d99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c88818b8bcc0a9d",
            "route_table_id": "rtb-0569386c98b3f2bf7",
            "subnet_id": "subnet-03db672ba4e1164b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbddd406c8abbe8a",
            "route_table_id": "rtb-0569386c98b3f2bf7",
            "subnet_id": "subnet-0774cde14c2ae7d42"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-06871550adf3d861f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06871550adf3d861f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-01e413acdf14b9a78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e413acdf14b9a78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-017e23c2c1e95d40b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017e23c2c1e95d40b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-private-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-0cd5c94851eb39d99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd5c94851eb39d99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1a",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-03db672ba4e1164b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03db672ba4e1164b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1b",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:subnet/subnet-0774cde14c2ae7d42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0774cde14c2ae7d42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "625413607130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc-public-us-east-1c",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07a37cb9d850bee91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:625413607130:vpc/vpc-07a37cb9d850bee91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cc67aa599087d0f",
            "default_route_table_id": "rtb-07fe1c44cff2ce065",
            "default_security_group_id": "sg-0e7c4266966638109",
            "dhcp_options_id": "dopt-0e03eea5a3a64db47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07a37cb9d850bee91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07fe1c44cff2ce065",
            "owner_id": "625413607130",
            "tags": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "terraform.workspace",
              "Name": "my-vpc",
              "Owner": "Terraform-Demo",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}